fix(css): remove overflow

--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,7 @@
 
 html,
 body {
+  width: 100%;
   height: 100%;
 }
 
@@ -14,6 +15,7 @@ body {
 canvas {
   width: 100%;
   height: 100%;
+  display: block;
 }
 
 #switcher {
